--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <jsonwebtoken.version>0.7.0</jsonwebtoken.version>
         <gson.version>2.8.5</gson.version>
         <joda.time.version>2.9.9</joda.time.version>
+        <aliyun.oss.version>2.8.3</aliyun.oss.version>
     </properties>
 
     <dependencies>
@@ -167,6 +168,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>${aliyun.oss.version}</version>
         </dependency>
     </dependencies>
 
