新增自习功能，完成官网抓取数据，但只能在本地抓取。新增寻课功能。

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,14 @@
             <artifactId>commons-codec</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- 验证码识别 -->
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
